--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "ts-node ./src/server.ts"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.0",
@@ -23,6 +24,7 @@
     "typescript": "^3.5.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.0",
     "@types/mongoose": "^5.5.12",
     "nodemon": "^1.19.1"
