--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.0",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
     "envalid": "^5.0.0",
     "express": "^4.16.4",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.9",
     "morgan": "~1.9.1",
     "ts-node": "^8.3.0",
@@ -25,7 +26,9 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.0",
+    "@types/jsonwebtoken": "^8.3.3",
     "@types/mongoose": "^5.5.12",
     "nodemon": "^1.19.1"
   }
